--- a/csgo.html
+++ b/csgo.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0;url=https://docs.google.com/spreadsheets/d/1YyQEZIGFDUvjZrtqDTq3pZHNvGPUfr0cY0YLBvYb54c/edit#gid=356312549" />
+    <meta http-equiv="refresh" content="0;url=http://dappyhiwali.group/csgo" />
     <title>Redirecting...</title>
     <script>
-      window.location.replace('https://docs.google.com/spreadsheets/d/1YyQEZIGFDUvjZrtqDTq3pZHNvGPUfr0cY0YLBvYb54c/edit#gid=356312549');
+      window.location.replace('http://dappyhiwali.group/csgo');
     </script>
   </head>
   <body></body>
